<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/emailTextView"
        android:drawableStart="@drawable/ic_baseline_mail_outline"
        android:drawableEnd="@drawable/ic_baseline_lock"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:clickable="false"
        style="@style/Widget.AppCompat.EditText"
        android:hint="@string/user_email_textview" />

    <EditText
        android:id="@+id/nameEditText"
        android:drawableStart="@drawable/ic_baseline_person_outline"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/user_name_edittext"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/surnameEditText"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/user_surname_edittext"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/addressEditText"
        android:drawableStart="@drawable/ic_baseline_home"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:hint="@string/user_address_edittext"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:drawableStart="@drawable/ic_baseline_phone"
        android:drawablePadding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/user_phone_edittext"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_save_button" />

    <Button
        android:id="@+id/getButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_get_button" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_delete_button" />
</LinearLayout>