<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="30dp"
    android:paddingEnd="10dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/sign_in_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/signInPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/sign_in_pwd"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/signInBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_bt" />

    <TextView
        android:id="@+id/toRegisterBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="@string/sign_in_to_register" />

</LinearLayout>